--- a/Reference-Manual-(v2.x)-Actions.mediawiki
+++ b/Reference-Manual-(v2.x)-Actions.mediawiki
@@ -463,7 +463,7 @@ SecRule REQUEST_HEADERS:User-Agent "Test" "log,pause:5000,id:125"
 ; Warning : This feature can be of limited benefit for slowing down brute force authentication attacks, but use with care. If you are under a denial of service attack, the pause feature may make matters worse, as it will cause an entire Apache worker (process or thread, depending on the deployment mode) to sit idle until the pause is completed.
 
 == phase ==
-'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults.
+'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults for that phase.
 
 '''Action Group:''' Meta-data
 
