--- a/Reference-Manual-(v2.x)-Configuration-Directives.mediawiki
+++ b/Reference-Manual-(v2.x)-Configuration-Directives.mediawiki
@@ -422,7 +422,7 @@ The possible values for the debug log level are:
 *9: log everything, including very detailed debugging information
 
 == SecDefaultAction ==
-'''Description''': Defines the default list of actions, which will be inherited by the rules in the same configuration context.
+'''Description''': Defines the default list of actions for a particular phase, which will be inherited by the rules in the same phase and in the same configuration context.
 
 '''Syntax:''' <code>SecDefaultAction "action1,action2,action3“ </code>
 
