--- a/Reference-Manual-(v2.x).mediawiki
+++ b/Reference-Manual-(v2.x).mediawiki
@@ -653,7 +653,7 @@ The possible values for the debug log level are:
 *9: log everything, including very detailed debugging information
 
 == SecDefaultAction ==
-'''Description''': Defines the default list of actions, which will be inherited by the rules in the same configuration context.
+'''Description''': Defines the default list of actions for a particular phase, which will be inherited by the rules in the same phase and in the same configuration context.
 
 '''Syntax:''' <code>SecDefaultAction "action1,action2,action3“ </code>
 
@@ -3468,7 +3468,7 @@ SecRule REQUEST_HEADERS:User-Agent "Test" "log,pause:5000,id:125"
 ; Warning : This feature can be of limited benefit for slowing down brute force authentication attacks, but use with care. If you are under a denial of service attack, the pause feature may make matters worse, as it will cause an entire Apache worker (process or thread, depending on the deployment mode) to sit idle until the pause is completed.
 
 == phase ==
-'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults.
+'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults for that phase.
 
 '''Action Group:''' Meta-data
 
