--- a/Reference-Manual-(v3.x).mediawiki
+++ b/Reference-Manual-(v3.x).mediawiki
@@ -421,7 +421,7 @@ The possible values for the debug log level are:
 *9: log everything, including very detailed debugging information
 
 == SecDefaultAction ==
-'''Description''': Defines the default list of actions, which will be inherited by the rules in the same configuration context.
+'''Description''': Defines the default list of actions for a particular phase, which will be inherited by the rules in the same phase and in the same configuration context.
 
 '''Syntax:''' <code>SecDefaultAction "action1,action2,action3“ </code>
 
@@ -2344,7 +2344,7 @@ SecRule ARGS "test" "phase:2,log,pass,setvar:TX.test=+1,id:124"
 ''Not supported in v3''' 
 
 == phase ==
-'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults.
+'''Description''': Places the rule or chain into one of five available processing phases. It can also be used in SecDefaultAction to establish the rule defaults for that phase.
 
 '''Action Group:''' Meta-data
 
