--- a/Reference-Manual-(v2.x)-Actions.mediawiki
+++ b/Reference-Manual-(v2.x)-Actions.mediawiki
@@ -186,7 +186,7 @@ The following configuration options are supported:
 #'''responseBodyAccess''' (Supported on libModSecurity: TBI)
 #'''responseBodyLimit''' (Supported on libModSecurity: TBI)
 #'''ruleEngine'''
-#'''ruleRemoveById''' - since this action us triggered at run time, it should be specified '''before''' the rule in which it is disabling.
+#'''ruleRemoveById''' - since this action is triggered at run time, it should be specified '''before''' the rule in which it is disabling.
 #'''ruleRemoveByMsg''' (Supported on libModSecurity: TBI)
 #'''ruleRemoveByTag''' (Supported on libModSecurity: TBI)
 #'''ruleRemoveTargetById''' - since this action is used to just remove targets, users don't need to use the char ! before the target list. 
