--- a/ModSecurity-Frequently-Asked-Questions-(FAQ).mediawiki
+++ b/ModSecurity-Frequently-Asked-Questions-(FAQ).mediawiki
@@ -1,5 +1,9 @@
 = ModSecurity Frequently Asked Questions (FAQ) (Last Full Update: August 28, 2014, Last Partial Update: Sept. 9, 2022) =
+
+'''OWASP ModSecurity took over the ModSecurity project in January 2024. The information in this wiki document will have to be revised or retired, since it's probably outdated.'''
+
 == Who Leads the ModSecurity Project? ==
+
 ModSecurity is supported by Trustwave's SpiderLabs Team and includes the following team members:
 *@martinhsv
 
